--- a/GBKB/templates/accounts/signin.html
+++ b/GBKB/templates/accounts/signin.html
@@ -15,7 +15,7 @@
 <form  method="post">
     {% csrf_token %}
 {% if error %}
-<p class="errorColor"> {{error}} </p>
+<p class="text-danger"> {{error}} </p>
 {% endif %}
 
         <p class="refont">User Name:</p>
