--- a/GBKB/templates/accounts/signup.html
+++ b/GBKB/templates/accounts/signup.html
@@ -15,7 +15,7 @@
 <form  method="post" action="{% url 'signup' %}">
       {% csrf_token %}
 {% if error %}
-<p class="errorColor"  > {{error}} </p>
+<p class="text-danger"  > {{error}} </p>
 {% endif %}
 
     {{form1|crispy}}
