--- a/GBKB/templates/base.html
+++ b/GBKB/templates/base.html
@@ -57,7 +57,7 @@
             </form>
         </li>
          <li class="nav-item active">
-          <a class="nav-link btn-outline-success" aria-current="page" href="#">Post AD</a>
+          <a class="nav-link btn-outline-success" aria-current="page" href="{% url 'postAd' %}">Post AD</a>
         </li>
         <li class="nav-item active">
           <a class="nav-link btn-outline-success" aria-current="page" href="#">Predict</a>
