--- a/GBKB/templates/base.html
+++ b/GBKB/templates/base.html
@@ -93,9 +93,11 @@
       <h1></h1>
 
 {% if request.user.is_authenticated %}
-      <p>welcome {{ user.username }}</p>
+
+
+
 {% endif %}
-<div class="p-5 rounded justify-content-center">
+<div class="p-5 rounded justify-content-center col-12	col-sm-12	col-md-12">
 {% block body1 %}
 
 {% endblock%}
