--- a/GBKB/templates/home.html
+++ b/GBKB/templates/home.html
@@ -35,7 +35,7 @@
       <p class="card-text"> Price: {{i.price}}</p>
       <p class="card-text"> Sqft: {{i.sqft}}</p>
       <p class="card-text"> Number of Bed Roms: {{i.bedRoom}}</p>
-      <p class="card-text ">Description: {{i.description}}</p>
+      <p class="card-text ">Description: {{i.des}} .....</p>
 
       </div>
 
