--- a/GBKB/templates/AdPosting/detail.html
+++ b/GBKB/templates/AdPosting/detail.html
@@ -4,7 +4,8 @@
 
 {% block head %}
 <link rel="stylesheet" type="text/css" href="static/css js/varifivcation.css">
-<link rel="stylesheet" type="text/css" href="static/css js/card_box.css">
+<link rel="stylesheet" type="text/css" href="static/css js/detailview.css">
+
 {% endblock%}
 
 
@@ -19,23 +20,28 @@
 
 {% block body1 %}
 
+{% if obj.userID == request.user %}
+<div class="mt-2"><p class="float-left mt-2">Want to delete this AD?</p> <a href="{% url 'delete' obj.id %}"> <button type="button" class="btn btn-danger">Delete</button> </a></div>
+{% endif %}
+
+
 {% if message %}
 <p class="text-success"> {{message}} </p>
 {% endif %}
 
-<h5 class="p-2 m-2 ">{{obj.title}}</h5>
 
+<h5 class="p-2 m-2 boxShadow">{{obj.title}}</h5>
 
-<div id="carouselExampleControlsNoTouching" class="carousel slide col-12	col-sm-12	col-md-8	col-lg-7	col-xl-7	col-xxl-7" data-bs-touch="false" data-bs-interval="false">
+<div id="carouselExampleControlsNoTouching" class="carousel slide col-12	col-sm-12	col-md-12	col-lg-6	col-xl-6	col-xxl-6" data-bs-touch="false" data-bs-interval="false">
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img src="{{obj.img1.url}}" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="{{obj.img1.url}}" class="d-block w-100" alt="...">
+      <img src="{{obj.img2.url}}" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="{{obj.img1.url}}" class="d-block w-100" alt="...">
+      <img src="{{obj.img3.url}}" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="prev">
@@ -50,14 +56,15 @@
 
 
 
-
-<div class="card boxVari " style="width: 18rem;">
+<div class="card  col-12	col-sm-12	col-md-12 float-right border-2" style="width: 19rem;">
   <div class="card-header">
     Contact seller
   </div>
   <ul class="list-group list-group-flush">
-    <li class="list-group-item">Email: {{obj.userID.email}}</li>
-    <li class="list-group-item">Mobile: {{mobile.mobileNumber}}</li>
+    <li class="list-group-item">Email: <a href="mailto: {{obj.userID.email}}"> {{obj.userID.email}}</a></li>
+
+
+    <li class="list-group-item">Mobile: <a href="tel://{{mobile.mobileNumber}}">{{mobile.mobileNumber}}</a></li>
 
   </ul>
 </div>
@@ -65,13 +72,20 @@
 
 
 
-   <div class="boxShadow"   >
+
+
+
+  <div class="border-2 p-2"   >
   <div class="">
       <div class="">
-      <p class=""> Price: {{i.price}}</p>
-      <p class=""> Sqft: {{i.sqft}}</p>
-      <p class=""> Number of Bed Roms: {{i.bedRoom}}</p>
-      <p class="">Description: {{i.description}}</p>
+      <p class="">Price: {{obj.price}}</p>
+      <p class="">Location: {{obj.location}}</p>
+      <p class="">Sqft: {{obj.sqft}}</p>
+      <p class="">Number of Bed Roms: {{obj.bedRoom}}</p>
+      <p class="">Wash Room: {{obj.washRoom}}</p>
+      <p class="">Floor Number: {{obj.floor}}</p>
+      <p class="">Road Size Infront of Building: {{obj.roadSize}}</p>
+      <p class="">Description: {{obj.description}}</p>
       </div>
   </div>
 </div>
