--- a/GBKB/templates/base.html
+++ b/GBKB/templates/base.html
@@ -28,7 +28,7 @@
 <link href="navbar-top-fixed.css" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="/static/css js/base1.css">   <!-- Custom styles for this template -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+<link rel="stylesheet" type="text/css" href="/static/css js/media_tag.css">
 {% block head %}
 
 {% endblock%}
@@ -87,8 +87,8 @@
   </div>
 </nav>
 
-<main class="container">
-  <div class="bg-light p-5 rounded justify-content-center">
+
+  <div class="pt-5  bg-light container">
 
       <h1></h1>
 
@@ -97,13 +97,13 @@
 
 
 {% endif %}
-<div class="p-5 rounded justify-content-center col-12	col-sm-12	col-md-12">
+<div class="pt-4">
 {% block body1 %}
 
 {% endblock%}
 </div>
   </div>
-</main>
+
 
 
 
