--- a/GBKB/templates/AdPosting/detail.html
+++ b/GBKB/templates/AdPosting/detail.html
@@ -32,7 +32,7 @@
 
 <h5 class="p-2 m-2 boxShadow">{{obj.title}}</h5>
 
-<div id="carouselExampleControlsNoTouching" class="carousel slide col-12	col-sm-12	col-md-12	col-lg-6	col-xl-6	col-xxl-6" data-bs-touch="false" data-bs-interval="false">
+<div id="carouselExampleControlsNoTouching" class="carousel slide col-12	col-sm-12	col-md-10=2	col-lg-6	col-xl-6	col-xxl-6" data-bs-touch="false" data-bs-interval="false">
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img src="{{obj.img1.url}}" class="d-block w-100" alt="...">
