--- a/GBKB/templates/accounts/activation.html
+++ b/GBKB/templates/accounts/activation.html
@@ -12,7 +12,9 @@ varifivcation.css
 
 
 {% block body1 %}
+<div class="col-12	col-sm-12	col-md-8 col-lg-8 col-xl-8 offset-lg-2">
   <p class="p-1">welcome {{ user.username }}</p>
+
 <div class="card boxVari" >
 <form  method="post" action="confirmActivation">
     {% csrf_token %}
@@ -67,7 +69,7 @@ varifivcation.css
   </div>
 </div>
 <!--collapse-->
-
+</div>
 
 
 {% endblock%}
