--- a/GBKB/templates/accounts/signin.html
+++ b/GBKB/templates/accounts/signin.html
@@ -12,22 +12,24 @@
 
 
 {% block body1 %}
+<div class="col-12	col-sm-12	col-md-8 col-lg-8 col-xl-8 offset-lg-2">
+<div class="card boxShadow border-4 justify-content-center"    >
 <form  method="post">
     {% csrf_token %}
 {% if error %}
 <p class="text-danger"> {{error}} </p>
 {% endif %}
 
-        <p class="refont">User Name:</p>
-        <input class="refont"  type="text" name="username" placeholder="Username" required><br>
-        <p class="refont">Password:</p>
-        <input class="refont" type="password" name="password" placeholder="Password" required><br><br>
-        <input class="refont"  type="submit" value="Login"> <p class="refont" >Don't have an account?<a href="{% url 'signup' %}">Sign UP</a></p>
+        <p class="mt-3">User Name:</p>
+        <input class="mx-5"  type="text" name="username" placeholder="Username" required><br>
+        <p class="mt-3">Password:</p>
+        <input class="mx-5" type="password" name="password" placeholder="Password" required><br>
+        <input class="mx-5 mt-3"  type="submit" value="Login"> <p class="mx-5" >Don't have an account?<a href="{% url 'signup' %}">Sign UP</a></p>
 
 
 </form>
-
-
+</div>
+</div>
 
 {% endblock%}
 
