--- a/GBKB/templates/home.html
+++ b/GBKB/templates/home.html
@@ -20,7 +20,7 @@
 <form  class="d-flex" action="{% url 'home' %}" method="GET">
 {% csrf_token %}
 <select name="location" id="location">
-  <option value="">Location</option>
+  <option value="">{{lo}}</option>
   <option value="Dhaka Cantonment">Dhaka Cantonment</option>
   <option value="Dhamrai">Dhamrai</option>
   <option value="Dhanmondi">Dhanmondi</option>
@@ -43,7 +43,7 @@
   <option value="Bonani">Bonani</option>
   <option value="Mohakhali">Mohakhali</option>
 </select>
-        <input class="form-control me-2 mx-1 " type="search" placeholder="Search" aria-label="Search">
+        <input class="form-control me-2 mx-1 " name="search" type="search" placeholder="Search" aria-label="Search" value="{{se}}">
         <button class="btn btn-outline-success" type="submit">Filter</button>
 </form>
 {% endblock%}
