starting to make predicting system

--- a/GBKB/templates/base.html
+++ b/GBKB/templates/base.html
@@ -104,7 +104,11 @@
 </div>
   </div>
 
-
+  <footer class=" d-flex justify-content-center mt-3 bg-secondary col-12" >
+        <div class="inner text-white">
+          <p>GBKB @<a href="https://getbootstrap.com/"></a><a href="https://twitter.com/mdo"></a>.</p>
+        </div>
+      </footer>
 
 
 
