prediction half done

--- a/GBKB/templates/base.html
+++ b/GBKB/templates/base.html
@@ -60,7 +60,7 @@
           <a class="nav-link btn-outline-success" aria-current="page" href="{% url 'postAd' %}">Post AD</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link btn-outline-success" aria-current="page" href="#">Predict</a>
+          <a class="nav-link btn-outline-success" aria-current="page" href="{% url 'prediction' %}">Predict</a>
         </li>
 {% else %}
         <li class="nav-item active">
