--- a/GBKB/templates/accounts/signin.html
+++ b/GBKB/templates/accounts/signin.html
@@ -14,7 +14,7 @@
 {% block body1 %}
 <div class="col-12	col-sm-12	col-md-8 col-lg-8 col-xl-8 offset-lg-2">
 <div class="card boxShadow border-4 justify-content-center"    >
-<form  method="post">
+<form  method="post" action="{% url 'signin' %}">
     {% csrf_token %}
 {% if error %}
 <p class="text-danger"> {{error}} </p>
