predict system  ready

--- a/GBKB/templates/home.html
+++ b/GBKB/templates/home.html
@@ -46,7 +46,8 @@
   <option value="Bonani">Bonani</option>
   <option value="Mohakhali">Mohakhali</option>
 </select>
-        <input class="form-control me-2 mx-1 " name="search" type="search" placeholder="Search" aria-label="Search" value="{{se}}">
+    <span class="d-block d-sm-none d-md-none clearfix"><br></span>
+        <input class="form-control me-2 mx-1  " name="search" type="search" placeholder="Search" aria-label="Search" value="{{se}}">
         <button class="btn btn-outline-success" type="submit">Filter</button>
 </form>
 {% endblock%}
