prediction system error fixed

--- a/GBKB/templates/prediction/predict.html
+++ b/GBKB/templates/prediction/predict.html
@@ -20,7 +20,7 @@
 <p class="text-danger"> {{error}} </p>
 {% endif %}
     {% if ans %}
-    <p class="text-primary">Based on your input,<br> The price of an apartment is around:<br> <span class="text-success">{{ans}} Tk</span> </p>
+    <p class="text-primary">Based on your input,<br><span>The price of an apartment is around:</span><br> <span class="text-success">{{ans}} Tk</span> </p>
 {% endif %}
 
      <p class="text-info">Provide proper inputs to predict the value<br>of an apartment which you may be looking for:</p>
