review frontend complete

--- a/GBKB/templates/accounts/myAccount.html
+++ b/GBKB/templates/accounts/myAccount.html
@@ -20,8 +20,7 @@
 <!--help-->
 {% if help %}
 <div class="alert alert-warning alert-dismissible fade show" role="alert">
-
-    <a  href="{% url 'home' %}">Help us to improve our predicting system!</a>
+    <a  href="{% url 'reviewFromUser' %}">Help us to improve our predicting system!</a>
   <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
 {% endif %}
